--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       </label>
       <label class="logo"><img src="IMAGES/logo.png" alt=""></label>
       <ul>
-        <li><a class="active" href="index.html"><i class="bi bi-house-door fa-2x"></i>Home</a></li>
-        <li><a href="artic.html"><i class="bi bi-book-half fa-2x"></i>Articles</a></li>
-        <li><a href="test.html"><i class="bi bi-pencil-square fa-2x"></i>Test</a></li>
-        <li><a href="about.html"><i class="bi bi-telephone fa-2x"></i>About</a></li>
+        <li><a class="active" href="index.html"><i class="bi bi-house-door fa-2x">Home</i></a></li>
+        <li><a href="artic.html"><i class="bi bi-book-half fa-2x">Articles</i></a></li>
+        <li><a href="test.html"><i class="bi bi-pencil-square fa-2x">Test</i></a></li>
+        <li><a href="about.html"><i class="bi bi-telephone fa-2x">About</i></a></li>
       </ul>
       <div class="ewastetitle"><h1>E-WASTE CLEAN,<br> KEEP IT GREEN</h1>
         <hr class="h">
