--- a/test.html
+++ b/test.html
@@ -17,10 +17,10 @@
       </label>
       <label class="logo"><img src="IMAGES/logo.png" alt=""></label>
       <ul>
-        <li><a  href="index.html"><i class="bi bi-house-door fa-2x"></i>Home</a></li>
-        <li><a  href="artic.html"><i class="bi bi-book-half fa-2x"></i>Articles</a></li>
-        <li><a class="active" href="test.html"><i class="bi bi-pencil-square fa-2x"></i>Test</a></li>
-        <li><a  href="about.html"><i class="bi bi-telephone fa-2x"></i>About</a></li>
+        <li><a  href="index.html"><i class="bi bi-house-door fa-2x">Home</i></a></li>
+        <li><a  href="artic.html"><i class="bi bi-book-half fa-2x">Articles</i></a></li>
+        <li><a class="active" href="test.html"><i class="bi bi-pencil-square fa-2x">Test</i></a></li>
+        <li><a  href="about.html"><i class="bi bi-telephone fa-2x">About</i></a></li>
       </ul>
     </nav>
        <div class="button2"><button><a href="https://ub0p4mdplmy.typeform.com/to/vx0JSpAF">Start Survey</a></button></div>  
